# message-box-system

./: README.md
docker-compose-template/: docker-compose.yml
docker-compose-template/nginx-conf/: default.conf
docker-compose-template/web/: index.html
docker-compose-template/web/css/: app.98070710.css
docker-compose-template/web/js/: app.98f7a370.js  app.98f7a370.js.map  chunk-vendors.e98c924a.js
document/: 初始化SQL.sql
message-box-client/: package-lock.json  package.json
message-box-client/src/: App.vue
message-box-client/src-tauri/: 2  Cargo.toml  tauri.conf.json
message-box-client/src-tauri/.cargo/: config.toml
message-box-client/src-tauri/capabilities/: default.json
message-box-client/src-tauri/src/: lib.rs  main.rs
message-box-client/src/components/: LogPanel.vue  SettingsPanel.vue  TagInput.vue  TrayMenu.vue
message-box-client/src/services/: logger.js  storage.js
message-box-core/: pom.xml
message-box-core/src/main/resources/: application.properties  application.yaml
message-box-web/: package-lock.json  package.json  vue.config.js
message-box-web/public/: index.html
message-box-web/src/: App.vue  main.js
message-box-web/src/api/: authn.js  channelCode.js  receiveCode.js  sendReceiveConfig.js  sendRecord.js  user.js
message-box-web/src/components/: MenuComponent.vue
message-box-web/src/config/: index.js
message-box-web/src/router/: index.js
message-box-web/src/store/: userStore.js
message-box-web/src/utils/: axios-ext.js  crypto.js  dialog.js
message-box-web/src/views/: IndexView.vue  LoginView.vue
(+109 files in other folders)
